# edwardsserial

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.gitlab/issue_templates/: Bug.md
edwardsserial/: __init__.py  nEXT.py  serial_protocol.py
public/: index.html
src/edwardsserial/: edwards_serial_protocol.py  serial_protocol.py  tic.py
src/edwardsserial.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/edwardsserial/tic/: gauge.py  pump.py  tic.py
src/tests/: mocked_serial.py
src/tests/test_serial_protocol/: test__check_alert.py  test__create_message.py  test_send_message.py
src/tests/test_tic/: test__serial_protocol_message.py  test_gauge.py  test_pressure.py
src/tic/: tic.py
tests/test_descriptors/: test_serial_query.py  test_value_range.py
tests/test_serial_protocol/: test_alert_id.py  test_send_message.py
tests/test_tic/: test_gauge.py
tic/: tic.py
