[tool.poetry]
name = "edwardsserial"
version = "0.1.0"
description = "Python API implementing the serial protocoll from edwards vacuum."
authors = ["Jan Petermann <jpeterma@physnet.uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "*"

[tool.poetry.dev-dependencies]
recommonmark = "*"
docutils = "!=0.16b0"
sphinx-markdown-tables = "*"
pytest = "*"
pytest-cov = ">=2.5.1"
pytest-subtests = "*"
sphinx-rtd-theme = "*"
twine = "*"
mypy = "*"
pylint = "*"
sphinx = "*"
pipenv = "*"
black = "==19.10b0"
pre-commit = "*"
pydocstyle = "*"
isort = "*"
seed-isort-config = "*"
ipython = "*"
rope = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
